--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "db:seeddev": "npx dotenv -e .env.local -- prisma db seed -- --environment development",
     "prisma:generate": "npx dotenv -e .env.local -- prisma generate",
     "prisma:studio": "npx dotenv -e .env.local -- prisma studio",
-    "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
+    "production:build": "npx prisma generate && npx prisma migrate deploy && next build",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
   },
-  "type":"module",
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
