--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "prisma": {
     "seed": "node prisma/seed.js"
   },
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
