--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
-    "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
