--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
   "prisma": {
     "seed": "node prisma/seed.js"
   },
-  "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
-    "next": "13.5.6",
+    "firebase": "^10.5.2",
+    "next": "^14.0.1",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8",
