Made vehicles get method

--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,6 @@
 DATABASE_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-pooler.us-east-2.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=10
 DIRECT_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588.us-east-2.aws.neon.tech/neondb?connect_timeout=10
 SHADOW_DATABASE_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-pooler.us-east-2.aws.neon.tech/shadowDB?pgbouncer=true&connect_timeout=10
+
+VERCEL_URL="https://"
+LOCAL_URL="http://localhost:3000"
