--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "postinstall": "prisma generate"
   },
   "prisma": {
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.mjs"
   },
-  "type": "module",
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
