--- a/.env.local
+++ b/.env.local
@@ -3,5 +3,5 @@ DATABASE_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-pooler.us-
 DIRECT_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588.us-east-2.aws.neon.tech/neondb?connect_timeout=10
 SHADOW_DATABASE_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-pooler.us-east-2.aws.neon.tech/shadowDB?pgbouncer=true&connect_timeout=10
 
-VERCEL_URL="https://"
+VERCEL_URL=""
 LOCAL_URL="http://localhost:3000"
