--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,6 @@ SHADOW_DATABASE_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-poo
 
 VERCEL_URL=""
 LOCAL_URL="http://localhost:3000"
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=secret
