--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ yarn-error.log*
 # local env files
 # this is a private Repo, we need to share with TA
 # .env*.local
+# .env.local
 
 # vercel
 .vercel
