--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ yarn-error.log*
 
 # local env files
 # this is a private Repo, we need to share with TA
-# .env*.local
+.env*.local
 # .env.local
 
 # vercel
