--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     "production:build": "npx prisma generate && npx prisma migrate deploy && next build",
     "postinstall": "prisma generate"
   },
-
   "prisma": {
     "seed": "node prisma/seed.mjs"
   },
-
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -33,10 +31,10 @@
     "firebase": "^10.5.2",
     "next": "^14.0.1",
     "next-auth": "^4.24.4",
+    "openai": "^4.17.4",
     "react": "^18",
     "react-dom": "^18"
   },
-
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10",
