--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/material": "^5.14.16",
     "@prisma/client": "^5.6.0",
     "@tanstack/react-query": "^5.4.3",
+    "@tanstack/react-query-devtools": "^5.8.3",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
     "next": "^14.0.1",
