--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "firebase": "^10.5.2",
     "next": "^14.0.1",
     "next-auth": "^4.24.4",
+    "openai": "^4.17.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10",
+    "daisyui": "^4.0.7",
     "dotenv-cli": "^7.3.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
