--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 # .env Next style
-DATABASE_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-pooler.us-east-2.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=10
-DIRECT_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588.us-east-2.aws.neon.tech/neondb?connect_timeout=10
-SHADOW_DATABASE_URL=postgres://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-pooler.us-east-2.aws.neon.tech/shadowDB?pgbouncer=true&connect_timeout=10
+DATABASE_URL=postgresql://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-pooler.us-east-2.aws.neon.tech/driveGreen?sslmode=require&pgbouncer=true&connect_timeout=10
+DIRECT_URL=postgresql://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588.us-east-2.aws.neon.tech/driveGreen?sslmode=require&connect_timeout=10
+SHADOW_DATABASE_URL=postgresql://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-pooler.us-east-2.aws.neon.tech/driveGreenShadow?sslmode=require&pgbouncer=true&connect_timeout=10
 
 LOCAL_URL=http://localhost:3000
 
