connect to openai

--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,7 @@ SHADOW_DATABASE_URL=postgresql://rui-min:wez0Jy4oEfRs@ep-green-recipe-34539588-p
 LOCAL_URL=http://localhost:3000
 
 NEXTAUTH_URL=http://localhost:3000
+
+BOT_MODEL ='gpt-3.5-turbo-1106'
+ASSISTANT_ID='asst_4Q6AELwbIfMPYFFmN1WrSwCJ'
+
