--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-auth": "^4.24.4",
     "openai": "^4.17.4",
     "react": "^18",
+    "react-chatbot-kit": "^2.2.1",
     "react-dom": "^18"
   },
   "devDependencies": {
