--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "next-auth": "^4.24.4",
     "openai": "^4.17.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.8.0",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
