--- a/.env.local
+++ b/.env.local
@@ -7,6 +7,6 @@ LOCAL_URL=http://localhost:3000
 
 NEXTAUTH_URL=http://localhost:3000
 
-BOT_MODEL ='gpt-3.5-turbo-1106'
+BOT_MODEL ='gpt-4-1106-preview'
 ASSISTANT_ID='asst_4Q6AELwbIfMPYFFmN1WrSwCJ'
 
